tests/contract_testcases/substrate/functions/stray_semicolon_01.sol
abstract contract x { struct a { uint32 f1; }; }
// ---- Expect: diagnostics ----
// error: 1:46-47: stray semicolon
